--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                 
                 <div class="hero-image" data-aos="fade-left">
                     <div class="profile-container">
-                        <img src="https://i.supaimg.com/f53de085-6d37-4962-9bc5-2d4cf07be14e.jpg" alt="Murli Kumar" class="profile-img">
+                        <img src="https://i.ibb.co/WWvTyCKf/IMG-20251130-134432.jpg" alt="Murli Kumar" class="profile-img">
                         <div class="tech-bubble"><i class="fab fa-react"></i></div>
                         <div class="tech-bubble"><i class="fab fa-js"></i></div>
                         <div class="tech-bubble"><i class="fab fa-node-js"></i></div>
